src/objects/Applicants_Information__c.object
<CustomObject>
    <description>This object stores the contact information of the applicants who apply for GSA IT jobs.</description>
    <fields>
        <fullName>City_State_or_Zip_Code__c</fullName>
        <label>City/State or Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Applicant phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Applicants Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>